change matery color style, add avatar, customized everything

--- a/layout/_partial/social-link.ejs
+++ b/layout/_partial/social-link.ejs
@@ -1,23 +1,29 @@
 <% if (theme.socialLink.github) { %>
-    <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="Visit my GitHub" data-position="top" data-delay="50">
         <i class="fab fa-github"></i>
     </a>
 <% } %>
 
+<% if (theme.socialLink.linkedin) { %>
+    <a href="<%= theme.socialLink.linkedin %>" class="tooltipped" target="_blank" data-tooltip="Follow me on Linkedin" data-position="top" data-delay="50">
+        <i class="fab fa-linkedin"></i>
+    </a>
+<% } %>
+
 <% if (theme.socialLink.email) { %>
-    <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
+    <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="Contact me by Email" data-position="top" data-delay="50">
         <i class="fas fa-envelope-open"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.facebook) { %>
-    <a href="<%= theme.socialLink.facebook %>" class="tooltipped" target="_blank" data-tooltip="关注我的Facebook: <%= theme.socialLink.facebook %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.facebook %>" class="tooltipped" target="_blank" data-tooltip="Follow my Facebook: <%= theme.socialLink.facebook %>" data-position="top" data-delay="50">
         <i class="fab fa-facebook-f"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.twitter) { %>
-    <a href="<%= theme.socialLink.twitter %>" class="tooltipped" target="_blank" data-tooltip="关注我的Twitter: <%= theme.socialLink.twitter %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.twitter %>" class="tooltipped" target="_blank" data-tooltip="Follow my Twitter: <%= theme.socialLink.twitter %>" data-position="top" data-delay="50">
         <i class="fab fa-twitter"></i>
     </a>
 <% } %>
@@ -41,7 +47,7 @@
 <% } %>
 
 <% if (theme.socialLink.rss) { %>
-    <a href="<%- url_for('/atom.xml') %>" class="tooltipped" target="_blank" data-tooltip="RSS 订阅" data-position="top" data-delay="50">
+    <a href="<%- url_for('/atom.xml') %>" class="tooltipped" target="_blank" data-tooltip="RSS Subscription" data-position="top" data-delay="50">
         <i class="fas fa-rss"></i>
     </a>
 <% } %>
